--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "nodemon ./app.js",
+    "test": "mocha",
+    "cover": "nyc --reporter=html mocha"
   },
   "author": "abhishek",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.4",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "mocha": "^8.4.0",
+    "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
+    "request": "^2.88.2"
   }
 }
